--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
 	<div class="btn-group">
 		<button type="button" class="btn btn-default btn-lg" id="buttonReset">Play Again?</button>
 	</div>
-	<br>
+	<br>	
 	<div class="panel panel-warning" id="gemRow">
 	  	<div class="panel-body">
 		    <div class="row">
 				<div class="col-xs-6 col-md-2 col-md-offset-2">
-					<img src="assets/images/blue.jpg" class="gems" id="blueGem">
+					<img src="assets/images/blue.png" class="gems" id="blueGem">
 				</div>
 				<div class="col-xs-6 col-md-2">
-					<img src="assets/images/green.jpg" class="gems" id="greenGem">
+					<img src="assets/images/green.png" class="gems" id="greenGem">
 				</div>
 				<div class="col-xs-6 col-md-2">
-					<img src="assets/images/red.jpg" class="gems" id="redGem">
+					<img src="assets/images/red.png" class="gems" id="redGem">
 				</div>
 				<div class="col-xs-6 col-md-2">
-					<img src="assets/images/yellow.jpg" class="gems" id="yellowGem">
+					<img src="assets/images/yellow.png" class="gems" id="yellowGem">
 				</div>
 			</div>
 	  	</div>
